scss/vaibito/_vaibito_form.scss
// Styles für das Anmeldeformular

#vaibito-form {
    label {
        display: block;
        margin-top: 20px;
    }

    input[type="text"], input[type="email"], 
    input[type="url"], input[type="password"], 
    input[type="search"], input[type="number"], 
    input[type="tel"], input[type="range"], 
    input[type="date"], input[type="month"], 
    input[type="week"], input[type="time"], 
    input[type="datetime"], 
    input[type="datetime-local"], 
    input[type="color"] {
        width: 100%;
    }

    input[type="radio"], input[type="checkbox"] {
        margin-right: 5px;
    }
}

